# SpineModelling

./: .gitignore  3D_MEASUREMENT_INTEGRATION_ASSESSMENT.md  3D_MEASUREMENT_INTEGRATION_COMPLETE.md  CLAUDE.md  DATABASE_INTEGRATION_SUMMARY.md  DATABASE_SETUP_GUIDE.md  DOCUMENTATION_INDEX.md  FEATURE_ANALYSIS_INDEX.md  FEATURE_GAP_ANALYSIS.md  FEATURE_GAP_ANALYSIS_SUMMARY.md  FILE_IO_IMPLEMENTATION_SUMMARY.md  FUTURE_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_2D_ANNOTATION.md  PATIENT_DATA_SYSTEM_README.md  QUICK_REFERENCE.md  README_ANALYSIS.txt  SpineModeling_CSharp_ANALYSIS.md  SpineModelling_ProjectMap.md  TEST_REPORT.md  test_3d_visualization.py  test_sample_data.py
SpineModeling_python/: .gitignore  BUG_FIX_SUMMARY.md  BUG_REPORT.md  FIXES_APPLIED.md  PHASE_6_INTEGRATION_REPORT.md  README.md  SETUP_GUIDE.md  VTK_IMPLEMENTATION_QUICK_REF.md  VTK_RENDERING_IMPLEMENTATION_SUMMARY.md  initialize_all_patients.py  integration_test_report.md  main.py  migrate_database.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_database_integration.py  test_full_workflow.py  test_integration.py  test_patient_system.py  test_vtk_panel.py
SpineModeling_python/docs/api/: README.md
SpineModeling_python/docs/migration_notes/: PHASE_1_SETUP.md  PHASE_2_CORE_DATA_MODELS.md
SpineModeling_python/docs/user_guide/: README.md
SpineModeling_python/spine_modeling/: __init__.py
SpineModeling_python/tests/: __init__.py  test_ct_import.py  test_integration_3d_measurement.py  test_projection_3d.py  test_realignment.py
(+77 files in other folders)
